--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -245,6 +245,7 @@ a{
     .gallery-img{
         width: 100%;
         max-width: 100%;
+        height: 400px;
         max-height: 100%;
     }
     .gallery-img img{
